@@ -4,16 +4,17 @@ use Mojo::Util 'trim';
 use Mojo::Redis::Cursor;
 use Mojo::Redis::Database;
 use Mojo::Redis::PubSub;
+use Mojo::Redis::Transaction;
 use Mojo::UserAgent;
 
 plan skip_all => 'CHECK_METHOD_COVERAGE=1' unless $ENV{CHECK_METHOD_COVERAGE};
 
 my $methods = Mojo::UserAgent->new->get('https://redis.io/commands')->res->dom->find('[data-name]');
-my @classes = qw(Mojo::Redis::Database Mojo::Redis::PubSub);
+my @classes = qw(Mojo::Redis::Database Mojo::Redis::PubSub Mojo::Redis::Transaction);
 my (%doc, %skip);
 
 $skip{method}{$_} = 1 for qw(auth hscan quit migrate pubsub scan select sscan swapdb wait zscan);
-$skip{group}{$_}  = 1 for qw(cluster scripting server stream transactions);
+$skip{group}{$_}  = 1 for qw(cluster scripting server stream);
 
 $methods = $methods->map(sub {
   $doc{$_->{'data-name'}} = [
